[gd_scene load_steps=24 format=3 uid="uid://b83ov23vrpvj5"]

[ext_resource type="PackedScene" uid="uid://ber283x8u6ura" path="res://assets/frog.tscn" id="1_fedk0"]
[ext_resource type="Script" uid="uid://b0c4fqqhe351e" path="res://frogger_gym.gd" id="1_jt4di"]
[ext_resource type="PackedScene" uid="uid://c7w1d8nh50ftl" path="res://assets/despawner.tscn" id="2_5m07v"]
[ext_resource type="Texture2D" uid="uid://dlwhrprvvwbhk" path="res://content/level_bg.png" id="2_hjc2u"]
[ext_resource type="PackedScene" uid="uid://cxvsjq2kthf42" path="res://assets/lane.tscn" id="4_5m07v"]
[ext_resource type="Resource" uid="uid://g1j8lqb40qm2" path="res://resources/buggy_a.tres" id="4_hjc2u"]
[ext_resource type="Resource" uid="uid://bt8jigvsk7eim" path="res://resources/tractor_a.tres" id="6_5m07v"]
[ext_resource type="Resource" uid="uid://2sopmq78cn3j" path="res://resources/sedan_a.tres" id="7_r7bsx"]
[ext_resource type="Resource" uid="uid://c1fx5o6alvi7y" path="res://resources/racecar.tres" id="8_8w67v"]
[ext_resource type="Resource" uid="uid://wwdn06c64120" path="res://resources/semitruck.tres" id="9_in348"]
[ext_resource type="Resource" uid="uid://b2b6i5j8ttjqm" path="res://resources/turtle_trio.tres" id="10_7t8du"]
[ext_resource type="Resource" uid="uid://blbckj5dpk1nu" path="res://resources/small_log_alt.tres" id="10_vwvlp"]
[ext_resource type="Resource" uid="uid://cjmy0ytovwtax" path="res://resources/large_log_alt.tres" id="11_vwvlp"]
[ext_resource type="Resource" uid="uid://d2jk1ct0f7ucd" path="res://resources/med_log_alt.tres" id="12_vwvlp"]
[ext_resource type="Resource" uid="uid://bpmfc6c4xfu7c" path="res://resources/turtle_duo.tres" id="13_aijpn"]
[ext_resource type="AudioStream" uid="uid://dmfl1ahpfcbk8" path="res://content/frogger_music.ogg" id="16_gqsmu"]
[ext_resource type="Script" uid="uid://cr772b803qf3g" path="res://goal_areas.gd" id="17_n1bqr"]
[ext_resource type="Script" uid="uid://bjk3cbdc7v7rr" path="res://out_of_bounds_death.gd" id="18_87o8q"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fedk0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87o8q"]
size = Vector2(14.5, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18hs2"]
size = Vector2(31.25, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otr5c"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5mxu"]
size = Vector2(9, 190)

[node name="Gym" type="Node2D"]
script = ExtResource("1_jt4di")

[node name="Despawner_L" parent="." instance=ExtResource("2_5m07v")]
position = Vector2(-168, 128)

[node name="Despawner_R" parent="." instance=ExtResource("2_5m07v")]
position = Vector2(408, 128)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(120, 128)
texture = ExtResource("2_hjc2u")

[node name="WorldBoundaries" type="Node" parent="."]

[node name="WorldBoundaryBottom" type="StaticBody2D" parent="WorldBoundaries"]
position = Vector2(23, 223)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundaries/WorldBoundaryBottom"]
position = Vector2(96.5, 10.999998)
rotation = 3.1415925
scale = Vector2(-1, -1)
shape = SubResource("WorldBoundaryShape2D_fedk0")

[node name="Water_TurtleTrio" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 112)
speed = 78.0
spawn_pos = Vector2(450, 0)
direction = Vector2(-1, 0)
is_water_lane = true
traffic_pattern = ExtResource("10_7t8du")
use_alt_pattern = true
alt_pattern_gap = 24.0

[node name="Water_SmallLog" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 96)
is_water_lane = true
traffic_pattern = ExtResource("10_vwvlp")
use_alt_pattern = true

[node name="Water_LargeLog" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 80)
speed = 70.0
is_water_lane = true
traffic_pattern = ExtResource("11_vwvlp")
use_alt_pattern = true
alt_pattern_gap = 60.0

[node name="Water_TurtleDuo" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 64)
speed = 65.0
spawn_pos = Vector2(450, 0)
direction = Vector2(-1, 0)
is_water_lane = true
traffic_pattern = ExtResource("13_aijpn")

[node name="Water_MedLog" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 48)
speed = 60.0
is_water_lane = true
traffic_pattern = ExtResource("12_vwvlp")
use_alt_pattern = true
alt_pattern_gap = 48.0

[node name="Frog" parent="." groups=["Frog"] instance=ExtResource("1_fedk0")]
unique_name_in_owner = true
position = Vector2(120, 224)

[node name="StartLane" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 224)
speed = 0.0
spawn_pos = Vector2(180, 0)

[node name="Road_Buggy" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 208)
spawn_pos = Vector2(480, 0)
direction = Vector2(-1, 0)
traffic_pattern = ExtResource("4_hjc2u")

[node name="Road_Tractor" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 192)
speed = 40.0
traffic_pattern = ExtResource("6_5m07v")

[node name="Road_Sedan" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 176)
speed = 58.0
spawn_pos = Vector2(470, 0)
direction = Vector2(-1, 0)
traffic_pattern = ExtResource("7_r7bsx")

[node name="Road_Racecar" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 160)
speed = 90.0
traffic_pattern = ExtResource("8_8w67v")

[node name="Road_Semi" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 144)
speed = 40.0
spawn_pos = Vector2(450, 0)
direction = Vector2(-1, 0)
traffic_pattern = ExtResource("9_in348")

[node name="MidSafe" parent="." instance=ExtResource("4_5m07v")]
unique_name_in_owner = true
position = Vector2(-126, 128)
speed = 0.0

[node name="FrogSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(120, 224)

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_gqsmu")
autoplay = true
parameters/looping = true

[node name="GoalAreas" type="Area2D" parent="."]
script = ExtResource("17_n1bqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalAreas"]
position = Vector2(18.25, 32)
shape = SubResource("RectangleShape2D_87o8q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GoalAreas"]
position = Vector2(69, 32)
shape = SubResource("RectangleShape2D_87o8q")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GoalAreas"]
position = Vector2(120, 32)
shape = SubResource("RectangleShape2D_87o8q")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GoalAreas"]
position = Vector2(171, 32)
shape = SubResource("RectangleShape2D_87o8q")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="GoalAreas"]
position = Vector2(222, 32)
shape = SubResource("RectangleShape2D_87o8q")

[node name="OutOfBoundsDeath" type="Area2D" parent="."]
script = ExtResource("18_87o8q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(94.375, 32)
shape = SubResource("RectangleShape2D_18hs2")
debug_color = Color(0.9405597, 7.9897045e-06, 0.616655, 0.41960785)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(146, 32)
shape = SubResource("RectangleShape2D_18hs2")
debug_color = Color(0.9405597, 7.9897045e-06, 0.616655, 0.41960785)

[node name="CollisionShape2D5" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(196, 32)
shape = SubResource("RectangleShape2D_18hs2")
debug_color = Color(0.9405597, 7.9897045e-06, 0.616655, 0.41960785)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(43.75, 32)
shape = SubResource("RectangleShape2D_18hs2")
debug_color = Color(0.9405597, 7.9897045e-06, 0.616655, 0.41960785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(4, 32)
shape = SubResource("RectangleShape2D_otr5c")
debug_color = Color(0.9282029, 0.16016695, 0.5399095, 0.41960785)

[node name="CollisionShape2D6" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(236, 32)
shape = SubResource("RectangleShape2D_otr5c")
debug_color = Color(0.9282029, 0.16016695, 0.5399095, 0.41960785)

[node name="CollisionShape2D7" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(-5, 137)
shape = SubResource("RectangleShape2D_k5mxu")
debug_color = Color(0.94033843, 1.3187826e-05, 0.61761975, 0.41960785)

[node name="CollisionShape2D8" type="CollisionShape2D" parent="OutOfBoundsDeath"]
position = Vector2(245, 137)
shape = SubResource("RectangleShape2D_k5mxu")
debug_color = Color(0.94033843, 1.3187826e-05, 0.61761975, 0.41960785)

[connection signal="body_entered" from="GoalAreas" to="GoalAreas" method="_on_body_entered"]
[connection signal="body_entered" from="OutOfBoundsDeath" to="OutOfBoundsDeath" method="_on_body_entered"]
